--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
-name = "raiku-simulator"
+name = "raiku-simulator-v2"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0.100"
-axum = "0.8.4"
+axum = "0.8.6"
 chrono = { version = "0.4.42", features = ["serde"] }
 dashmap = "6.1.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 futures-util = "0.3.31"
 rand = "0.9.2"
-serde = { version = "1.0.226", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["cors"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
-uuid = { version = "1.18.1", features = ["v4", "serde"] }
+utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
+uuid = { version = "1.18.1", features = ["serde", "v4"] }
 
 [[bin]]
 name = "raiku_simulator"
